--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/stripe-js": "^8.6.0",
+    "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +57,7 @@
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -63,7 +65,6 @@
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.0.15",
     "recharts": "2.15.4",
-    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
