--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:apply-roles": "tsx scripts/apply-role-migration.ts",
+    "db:apply-employees": "tsx scripts/apply-employees-migration.ts",
+    "db:apply-permissions": "tsx scripts/apply-permissions-migration.ts",
+    "db:seed-permissions": "tsx scripts/seed-permissions.ts",
+    "db:cleanup": "tsx -r dotenv/config scripts/db/cleanup-database.ts dotenv_config_path=.env.local",
+    "db:cleanup:dry-run": "tsx -r dotenv/config scripts/db/cleanup-database.ts dotenv_config_path=.env.local --dry-run",
+    "db:count": "tsx -r dotenv/config scripts/db/count-db-records.ts dotenv_config_path=.env.local",
+    "db:drop-tables": "tsx -r dotenv/config scripts/db/drop-all-tables.ts dotenv_config_path=.env.local",
+    "db:drop-tables:dry-run": "tsx -r dotenv/config scripts/db/drop-all-tables.ts dotenv_config_path=.env.local --dry-run",
+    "admin:create": "tsx scripts/create-admin-user.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
@@ -82,6 +92,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
